Agrego proyectos y un par dde fixes en la misma sección.

--- a/css/style.css
+++ b/css/style.css
@@ -1643,3 +1643,9 @@ section#fh5co-home{overflow: hidden;}
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/* Customs Styles */
+
+.title-site {
+  color: #fff;
+}
