--- a/css/style.css
+++ b/css/style.css
@@ -1645,3 +1645,35 @@ section#fh5co-home{overflow: hidden;}
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/********** Custom Styles ************/
+
+/* Title sites under construction */
+.title-site {
+    color: #fff;
+}
+
+/* sendmail responses */
+.success {
+    padding: 1em;
+    margin-bottom: 0.75rem;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    color: #468847;
+    background-color: #dff0d8;
+    border: 1px solid #d6e9c6;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.error {
+    padding: 1em;
+    margin-bottom: 0.75rem;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    color: #b94a48;
+    background-color: #f2dede;
+    border: 1px solid rgba(185, 74, 72, 0.3);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
